Remove __CYGWIN__ define

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -21,7 +21,7 @@ else
   endif
 endif
 ifeq ($(HOST_OS),Windows)
-  CFLAGS += -DWIN32 -D_WIN32 -D__CYGWIN__
+  CFLAGS += -DWIN32 -D_WIN32
 endif
 
 BUILD_PROGRAMS := $(ALL_PROGRAMS)
